GUIDING_PRINCIPLES/Environment_Setup.txt
### Install lua ####
sudo apt-get install lua5.1
sudo apt-get install liblua5.1-dev  


######## Lua JIT #########
wget http://luajit.org/download/LuaJIT-2.0.4.tar.gz
tar -xvf LuaJIT-2.0.4.tar.gz
cd LuaJIT-2.0.4/
make
sudo make install



##### Installing the Luaffi ######
- git clone https://github.com/jmckaskill/luaffi/

vim Makefile
Add lua5.1 instead of lua in the below line, basically
Change : LUA_CFLAGS=`$(PKG_CONFIG) --cflags lua5.2 2>/dev/null || $(PKG_CONFIG) --cflags lua5.1`
with : LUA_CFLAGS=`$(PKG_CONFIG) --cflags lua5.2 2>/dev/null || $(PKG_CONFIG) --cflags lua5.1`

copied ffi.so  in the directlry where the lua code was there for assignemtn1 and it worked without change..






#### install dyncall #####
wget http://www.dyncall.org/r0.9/dyncall-0.9-debian-4.1.1-21-ppc.tar.gz
http://www.dyncall.org/r0.9/dyncall-0.9-debian-4.1.1-21-ppc.tar.gz

http://www.dyncall.org/r0.9/dyncall-0.9.tar.gz
tar -xvf dyncall-0.9.tar.gz
cd dyncall-0.9
./configure
make
sudo make install

sudo apt-get install mercurial
hg clone  http://hg.dyncall.org/pub/dyncall/bindings
cd bindings/lua/luadc

c99 -shared -o luadc.so -fPIC -I/usr/include/lua5.1 -I/home/pranav/q/allation/dyncall-0.9-release/include luadc.c /usr/local/lib/libdyncall_s.a /usr/local/lib/libdynload_s.a /usr/local/lib/libdyncallback_s.a

uadc.c:165:12: error: ‘DC_CALL_C_ARM’ undeclared here (not in a function)
   "C_ARM", DC_CALL_C_ARM,
            ^
Remove the offending line in luadc.c and run above command again. It will create luadc.so



### Generate PDF using latext ###

sudo apt-get install texlive-full


cd Q/DATA_LOAD/
touch .meta
touch .dep
eval `../latex/tools/setenv`
make -f ../latex/tools/docdir.mk csv_load.pdf



###### Lua Rocks and third party library installed using it ############

wget https://luarocks.org/releases/luarocks-2.4.1.tar.gz
tar zxpf luarocks-2.4.1.tar.gz
cd luarocks-2.4.1
./configure; sudo make bootstrap


# install luaunit #
# sudo luarocks install luaunit

#install penlight ###
sudo luarocks install penlight

#install luaposix ###
# sudo luarocks install luaposix
